<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorMain"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorMain">


    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="30dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:text="Daily Reminder:"/>-->

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"

        android:headerBackground="@android:color/holo_orange_light"
        android:hint="Enter time"
        android:inputType="text"
        android:numbersSelectorColor="@android:color/holo_orange_light"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/text_seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        style="@style/AlertDialog.AppCompat"
        android:text="Maximum Distance" />

    <SeekBar
        android:id="@+id/distance"
        style="@android:style/Widget.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:clickable="false"
        android:inputType="text"
        android:max="10"
        android:textSize="24sp"
        android:visibility="visible" />
    <TextView
        android:id="@+id/text_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="Maximum Age" />
    <SeekBar
        android:id="@+id/age"
        style="@android:style/Widget.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:clickable="false"
        android:inputType="text"
        android:max="82"
        android:textSize="24sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/radio_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="Gender"/>


    <Spinner
        android:id="@+id/genders"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="Make account public?" />

    <Switch
        android:id="@+id/switchButton"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:checked="false"
        android:showText="true"
        android:splitTrack="false"
        android:textAlignment="textEnd"
        android:textColorLink="@android:color/holo_orange_light"
        android:textOff="No"
        android:textOn="Yes"
        android:textStyle="bold|italic"
        tools:checked="false" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="Update"/>

</LinearLayout>
</ScrollView>