...
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Name: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/nameDisplayTextView"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginBottom="3dp"
                android:text="[name]"
                android:textSize="8pt" />
...
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Age: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/ageDisplayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="3dp"
                android:text="[age]"
                android:textSize="8pt" />
...
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Location: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/locationDisplayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="[click to edit location]"
                android:textSize="8pt" />

...
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Occupation: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/occupationDisplayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="3dp"
                android:text="[click to edit occupation]"
                android:textSize="8pt" />
...
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Description: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/descriptionDisplayTextView"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="[click to edit description]"
                android:textSize="8pt" />

...
